--- a/all_notes.html
+++ b/all_notes.html
@@ -254,6 +254,20 @@
               OS
             </a>
           </div>
+          <!---linux-->
+           <div
+            class="bg-white rounded-2xl shadow hover:scale-105 hover:bg-blue-50 transition p-5 text-center"
+          >
+            <a href="dbms/dbms.html" class="text-gray-800 font-semibold block">
+              <img
+                src="../assest/folder.jpg"
+                alt="Folder Icon"
+                class="w-[100px] mx-auto mb-4"
+              />
+              OS
+            </a>
+          </div>
+          <!--DSC-->
 
           <div
             class="bg-white rounded-2xl shadow hover:scale-105 hover:bg-blue-50 transition p-5 text-center"
