Update  Educational Qualifications  index.html

--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@
                         My journey in tech began with simple websites and has evolved into complex AI systems. I believe
                         in continuous learning and sharing knowledge with others.
                     </p>
+                     <h3 class="text-2xl font-semibold mb-4 mt-8">Educational Qualifications</h3>
+                    <ul>
+                        <li>I have completed my <strong>Bachelor of Arts</strong> with specialization in <strong>Political Science</strong> and <strong>Diploma in Pharmacy (D. Pharma)</strong>. Currently, I am pursuing a <strong>Bachelor of Computer Applications (Data Science & Artificial Intelligence)</strong> from <strong>BBD University, Lucknow</strong>.
+</li>
+
+                    </ul>
+
 
                     <h3 class="text-2xl font-semibold mb-4 mt-8">What I Offer</h3>
                     <ul class="space-y-3">
