--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div
                         class="w-64 h-64 md:w-80 md:h-80 bg-white bg-opacity-5 rounded-full absolute -bottom-6 -right-6">
                     </div>
-                    <img src="assest/logo.jpg" alt="Ankit Singh"
+                    <img src="assest/ankit.jpg" alt="Ankit Singh"
                         class="relative z-10 w-64 h-64 md:w-80 md:h-80 object-cover rounded-full border-4 border-white shadow-xl">
                 </div>
             </div>
