--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
+    
 <script type="text/javascript">
    (function(){
       emailjs.init({
@@ -487,6 +488,19 @@
     <script src="script.js">
 
     </script>
+    <script>
+  window.watsonAssistantChatOptions = {
+    integrationID: "aaa5d688-39df-4ca5-9a35-92d0a4a22285", // The ID of this integration.
+    region: "au-syd", // The region your integration is hosted in.
+    serviceInstanceID: "379491b7-ea68-4d29-a7c7-a281580fbe12", // The ID of your service instance.
+    onLoad: async (instance) => { await instance.render(); }
+  };
+  setTimeout(function(){
+    const t=document.createElement('script');
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+    document.head.appendChild(t);
+  });
+</script>
     </body>
 
     </html>
