--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional portfolio of Ankit Singh, Web & AI Developer">
-    <title>Ankit Singh | Web & AI Developer</title>
+    <meta name="description" content="Professional portfolio of Ankit kumar, Web & AI Developer">
+    <title>Ankit kumar | Web & AI Developer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <script type="text/javascript"
@@ -129,7 +129,7 @@
     <section id="home" class="py-20 bg-gradient-to-r from-primary to-accent text-white">
         <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 mb-10 md:mb-0">
-                <h1 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="text-secondary">Ankit Singh</span>
+                <h1 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="text-secondary">Ankit kumar</span>
                 </h1>
                 <p class="text-xl mb-8 opacity-90">Web & AI Developer | Founder of CodeWithAnkit</p>
                 <p class="mb-8 text-gray-200">Creating innovative solutions through code and artificial intelligence.
@@ -148,7 +148,7 @@
                     <div
                         class="w-64 h-64 md:w-80 md:h-80 bg-white bg-opacity-5 rounded-full absolute -bottom-6 -right-6">
                     </div>
-                    <img src="assest/ankit.jpg" alt="Ankit Singh"
+                    <img src="assest/ankit.jpg" alt="Ankit kumar"
                         class="relative z-10 w-64 h-64 md:w-80 md:h-80 object-cover rounded-full border-4 border-white shadow-xl">
                 </div>
             </div>
@@ -360,8 +360,8 @@
                                 </div>
                                 <div>
                                     <h4 class="font-medium text-gray-700">Email</h4>
-                                    <a href="mailto:ankitsingh20021010@gmail.com"
-                                        class="text-gray-600 hover:text-primary transition">ankitsingh20021010@gmail.com</a>
+                                    <a href="mailto:ankitkumar20021010@gmail.com"
+                                        class="text-gray-600 hover:text-primary transition">ankitkumar20021010@gmail.com</a>
                                 </div>
                             </div>
 
@@ -371,8 +371,8 @@
                                 </div>
                                 <div>
                                     <h4 class="font-medium text-gray-700">GitHub</h4>
-                                    <a href="https://github.com/ankitsingh20021010" target="_blank"
-                                        class="text-gray-600 hover:text-primary transition">github.com/ankitsingh20021010</a>
+                                    <a href="https://github.com/ankitkumar20021010" target="_blank"
+                                        class="text-gray-600 hover:text-primary transition">github.com/ankitkumar20021010</a>
                                 </div>
                             </div>
 
