Update email and GitHub links to new user

--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
                                 </div>
                                 <div>
                                     <h4 class="font-medium text-gray-700">Email</h4>
-                                    <a href="mailto:ankitkumar20021010@gmail.com"
-                                        class="text-gray-600 hover:text-primary transition">ankitkumar20021010@gmail.com</a>
+                                    <a href="mailto:ankitsingh20021010@gmail.com"
+                                        class="text-gray-600 hover:text-primary transition">ankitsingh20021010@gmail.com</a>
                                 </div>
                             </div>
 
@@ -371,8 +371,8 @@
                                 </div>
                                 <div>
                                     <h4 class="font-medium text-gray-700">GitHub</h4>
-                                    <a href="https://github.com/ankitkumar20021010" target="_blank"
-                                        class="text-gray-600 hover:text-primary transition">github.com/ankitkumar20021010</a>
+                                    <a href="https://github.com/ankitsingh20021010" target="_blank"
+                                        class="text-gray-600 hover:text-primary transition">github.com/ankitsingh20021010</a>
                                 </div>
                             </div>
 
